--- a/app/assets/styles/src/blocks/_filters.styl
+++ b/app/assets/styles/src/blocks/_filters.styl
@@ -24,7 +24,7 @@
 			clear left
 		
 		&.active
-			background #f0f0f0
+			background $clr_grey_bg
 			color $clr_base
 			&:hover
 				text-decoration none
