--- a/app/assets/styles/src/_sprites.styl
+++ b/app/assets/styles/src/_sprites.styl
@@ -11,28 +11,39 @@ $icon_home = x y offset_x offset_y width height total_width total_height image_p
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet = width height image $spritesheet_sprites;
 */
+$sprite_getmore_name = 'sprite_getmore';
+$sprite_getmore_x = 145px;
+$sprite_getmore_y = 52px;
+$sprite_getmore_offset_x = -145px;
+$sprite_getmore_offset_y = -52px;
+$sprite_getmore_width = 35px;
+$sprite_getmore_height = 31px;
+$sprite_getmore_total_width = 249px;
+$sprite_getmore_total_height = 130px;
+$sprite_getmore_image = '../../images/build/sprite.png';
+$sprite_getmore = 145px 52px -145px -52px 35px 31px 249px 130px '../../images/build/sprite.png' 'sprite_getmore';
 $sprite_logo_name = 'sprite_logo';
-$sprite_logo_x = 0px;
-$sprite_logo_y = 104px;
-$sprite_logo_offset_x = 0px;
-$sprite_logo_offset_y = -104px;
+$sprite_logo_x = 145px;
+$sprite_logo_y = 0px;
+$sprite_logo_offset_x = -145px;
+$sprite_logo_offset_y = 0px;
 $sprite_logo_width = 104px;
 $sprite_logo_height = 26px;
 $sprite_logo_total_width = 249px;
 $sprite_logo_total_height = 130px;
 $sprite_logo_image = '../../images/build/sprite.png';
-$sprite_logo = 0px 104px 0px -104px 104px 26px 249px 130px '../../images/build/sprite.png' 'sprite_logo';
+$sprite_logo = 145px 0px -145px 0px 104px 26px 249px 130px '../../images/build/sprite.png' 'sprite_logo';
 $sprite_logo_inner_name = 'sprite_logo_inner';
-$sprite_logo_inner_x = 145px;
-$sprite_logo_inner_y = 0px;
-$sprite_logo_inner_offset_x = -145px;
-$sprite_logo_inner_offset_y = 0px;
+$sprite_logo_inner_x = 0px;
+$sprite_logo_inner_y = 104px;
+$sprite_logo_inner_offset_x = 0px;
+$sprite_logo_inner_offset_y = -104px;
 $sprite_logo_inner_width = 104px;
 $sprite_logo_inner_height = 26px;
 $sprite_logo_inner_total_width = 249px;
 $sprite_logo_inner_total_height = 130px;
 $sprite_logo_inner_image = '../../images/build/sprite.png';
-$sprite_logo_inner = 145px 0px -145px 0px 104px 26px 249px 130px '../../images/build/sprite.png' 'sprite_logo_inner';
+$sprite_logo_inner = 0px 104px 0px -104px 104px 26px 249px 130px '../../images/build/sprite.png' 'sprite_logo_inner';
 $sprite_promo_bags_name = 'sprite_promo-bags';
 $sprite_promo_bags_x = 0px;
 $sprite_promo_bags_y = 0px;
@@ -89,60 +100,104 @@ $sprite_rating_empty_total_height = 130px;
 $sprite_rating_empty_image = '../../images/build/sprite.png';
 $sprite_rating_empty = 225px 27px -225px -27px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_empty';
 $sprite_rating_empty_white_name = 'sprite_rating_empty_white';
-$sprite_rating_empty_white_x = 145px;
+$sprite_rating_empty_white_x = 181px;
 $sprite_rating_empty_white_y = 52px;
-$sprite_rating_empty_white_offset_x = -145px;
+$sprite_rating_empty_white_offset_x = -181px;
 $sprite_rating_empty_white_offset_y = -52px;
 $sprite_rating_empty_white_width = 17px;
 $sprite_rating_empty_white_height = 16px;
 $sprite_rating_empty_white_total_width = 249px;
 $sprite_rating_empty_white_total_height = 130px;
 $sprite_rating_empty_white_image = '../../images/build/sprite.png';
-$sprite_rating_empty_white = 145px 52px -145px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_empty_white';
+$sprite_rating_empty_white = 181px 52px -181px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_empty_white';
 $sprite_rating_full_name = 'sprite_rating_full';
-$sprite_rating_full_x = 163px;
+$sprite_rating_full_x = 199px;
 $sprite_rating_full_y = 52px;
-$sprite_rating_full_offset_x = -163px;
+$sprite_rating_full_offset_x = -199px;
 $sprite_rating_full_offset_y = -52px;
 $sprite_rating_full_width = 17px;
 $sprite_rating_full_height = 16px;
 $sprite_rating_full_total_width = 249px;
 $sprite_rating_full_total_height = 130px;
 $sprite_rating_full_image = '../../images/build/sprite.png';
-$sprite_rating_full = 163px 52px -163px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_full';
+$sprite_rating_full = 199px 52px -199px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_full';
 $sprite_rating_full_white_name = 'sprite_rating_full_white';
-$sprite_rating_full_white_x = 181px;
+$sprite_rating_full_white_x = 217px;
 $sprite_rating_full_white_y = 52px;
-$sprite_rating_full_white_offset_x = -181px;
+$sprite_rating_full_white_offset_x = -217px;
 $sprite_rating_full_white_offset_y = -52px;
 $sprite_rating_full_white_width = 17px;
 $sprite_rating_full_white_height = 16px;
 $sprite_rating_full_white_total_width = 249px;
 $sprite_rating_full_white_total_height = 130px;
 $sprite_rating_full_white_image = '../../images/build/sprite.png';
-$sprite_rating_full_white = 181px 52px -181px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_full_white';
+$sprite_rating_full_white = 217px 52px -217px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_full_white';
+$sprite_status_no_small_name = 'sprite_status_no_small';
+$sprite_status_no_small_x = 202px;
+$sprite_status_no_small_y = 69px;
+$sprite_status_no_small_offset_x = -202px;
+$sprite_status_no_small_offset_y = -69px;
+$sprite_status_no_small_width = 11px;
+$sprite_status_no_small_height = 11px;
+$sprite_status_no_small_total_width = 249px;
+$sprite_status_no_small_total_height = 130px;
+$sprite_status_no_small_image = '../../images/build/sprite.png';
+$sprite_status_no_small = 202px 69px -202px -69px 11px 11px 249px 130px '../../images/build/sprite.png' 'sprite_status_no_small';
+$sprite_status_ok_small_name = 'sprite_status_ok_small';
+$sprite_status_ok_small_x = 235px;
+$sprite_status_ok_small_y = 52px;
+$sprite_status_ok_small_offset_x = -235px;
+$sprite_status_ok_small_offset_y = -52px;
+$sprite_status_ok_small_width = 12px;
+$sprite_status_ok_small_height = 11px;
+$sprite_status_ok_small_total_width = 249px;
+$sprite_status_ok_small_total_height = 130px;
+$sprite_status_ok_small_image = '../../images/build/sprite.png';
+$sprite_status_ok_small = 235px 52px -235px -52px 12px 11px 249px 130px '../../images/build/sprite.png' 'sprite_status_ok_small';
+$sprite_watch_name = 'sprite_watch';
+$sprite_watch_x = 181px;
+$sprite_watch_y = 69px;
+$sprite_watch_offset_x = -181px;
+$sprite_watch_offset_y = -69px;
+$sprite_watch_width = 20px;
+$sprite_watch_height = 11px;
+$sprite_watch_total_width = 249px;
+$sprite_watch_total_height = 130px;
+$sprite_watch_image = '../../images/build/sprite.png';
+$sprite_watch = 181px 69px -181px -69px 20px 11px 249px 130px '../../images/build/sprite.png' 'sprite_watch';
+$sprite_getmore_2x_name = 'sprite_getmore-2x';
+$sprite_getmore_2x_x = 290px;
+$sprite_getmore_2x_y = 105px;
+$sprite_getmore_2x_offset_x = -290px;
+$sprite_getmore_2x_offset_y = -105px;
+$sprite_getmore_2x_width = 70px;
+$sprite_getmore_2x_height = 62px;
+$sprite_getmore_2x_total_width = 498px;
+$sprite_getmore_2x_total_height = 261px;
+$sprite_getmore_2x_image = '../../images/build/sprite@2x.png';
+$sprite_getmore_2x = 290px 105px -290px -105px 70px 62px 498px 261px '../../images/build/sprite@2x.png' 'sprite_getmore-2x';
 $sprite_logo_2x_name = 'sprite_logo-2x';
-$sprite_logo_2x_x = 0px;
-$sprite_logo_2x_y = 208px;
-$sprite_logo_2x_offset_x = 0px;
-$sprite_logo_2x_offset_y = -208px;
+$sprite_logo_2x_x = 290px;
+$sprite_logo_2x_y = 0px;
+$sprite_logo_2x_offset_x = -290px;
+$sprite_logo_2x_offset_y = 0px;
 $sprite_logo_2x_width = 208px;
 $sprite_logo_2x_height = 53px;
 $sprite_logo_2x_total_width = 498px;
 $sprite_logo_2x_total_height = 261px;
 $sprite_logo_2x_image = '../../images/build/sprite@2x.png';
-$sprite_logo_2x = 0px 208px 0px -208px 208px 53px 498px 261px '../../images/build/sprite@2x.png' 'sprite_logo-2x';
+$sprite_logo_2x = 290px 0px -290px 0px 208px 53px 498px 261px '../../images/build/sprite@2x.png' 'sprite_logo-2x';
 $sprite_logo_inner_2x_name = 'sprite_logo_inner-2x';
-$sprite_logo_inner_2x_x = 290px;
-$sprite_logo_inner_2x_y = 0px;
-$sprite_logo_inner_2x_offset_x = -290px;
-$sprite_logo_inner_2x_offset_y = 0px;
+$sprite_logo_inner_2x_x = 0px;
+$sprite_logo_inner_2x_y = 208px;
+$sprite_logo_inner_2x_offset_x = 0px;
+$sprite_logo_inner_2x_offset_y = -208px;
 $sprite_logo_inner_2x_width = 208px;
 $sprite_logo_inner_2x_height = 53px;
 $sprite_logo_inner_2x_total_width = 498px;
 $sprite_logo_inner_2x_total_height = 261px;
 $sprite_logo_inner_2x_image = '../../images/build/sprite@2x.png';
-$sprite_logo_inner_2x = 290px 0px -290px 0px 208px 53px 498px 261px '../../images/build/sprite@2x.png' 'sprite_logo_inner-2x';
+$sprite_logo_inner_2x = 0px 208px 0px -208px 208px 53px 498px 261px '../../images/build/sprite@2x.png' 'sprite_logo_inner-2x';
 $sprite_promo_bags_2x_name = 'sprite_promo-bags-2x';
 $sprite_promo_bags_2x_x = 0px;
 $sprite_promo_bags_2x_y = 0px;
@@ -199,47 +254,80 @@ $sprite_rating_empty_2x_total_height = 261px;
 $sprite_rating_empty_2x_image = '../../images/build/sprite@2x.png';
 $sprite_rating_empty_2x = 450px 55px -450px -55px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_empty-2x';
 $sprite_rating_empty_white_2x_name = 'sprite_rating_empty_white-2x';
-$sprite_rating_empty_white_2x_x = 290px;
+$sprite_rating_empty_white_2x_x = 362px;
 $sprite_rating_empty_white_2x_y = 105px;
-$sprite_rating_empty_white_2x_offset_x = -290px;
+$sprite_rating_empty_white_2x_offset_x = -362px;
 $sprite_rating_empty_white_2x_offset_y = -105px;
 $sprite_rating_empty_white_2x_width = 34px;
 $sprite_rating_empty_white_2x_height = 32px;
 $sprite_rating_empty_white_2x_total_width = 498px;
 $sprite_rating_empty_white_2x_total_height = 261px;
 $sprite_rating_empty_white_2x_image = '../../images/build/sprite@2x.png';
-$sprite_rating_empty_white_2x = 290px 105px -290px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_empty_white-2x';
+$sprite_rating_empty_white_2x = 362px 105px -362px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_empty_white-2x';
 $sprite_rating_full_2x_name = 'sprite_rating_full-2x';
-$sprite_rating_full_2x_x = 326px;
+$sprite_rating_full_2x_x = 398px;
 $sprite_rating_full_2x_y = 105px;
-$sprite_rating_full_2x_offset_x = -326px;
+$sprite_rating_full_2x_offset_x = -398px;
 $sprite_rating_full_2x_offset_y = -105px;
 $sprite_rating_full_2x_width = 34px;
 $sprite_rating_full_2x_height = 32px;
 $sprite_rating_full_2x_total_width = 498px;
 $sprite_rating_full_2x_total_height = 261px;
 $sprite_rating_full_2x_image = '../../images/build/sprite@2x.png';
-$sprite_rating_full_2x = 326px 105px -326px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_full-2x';
+$sprite_rating_full_2x = 398px 105px -398px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_full-2x';
 $sprite_rating_full_white_2x_name = 'sprite_rating_full_white-2x';
-$sprite_rating_full_white_2x_x = 362px;
+$sprite_rating_full_white_2x_x = 434px;
 $sprite_rating_full_white_2x_y = 105px;
-$sprite_rating_full_white_2x_offset_x = -362px;
+$sprite_rating_full_white_2x_offset_x = -434px;
 $sprite_rating_full_white_2x_offset_y = -105px;
 $sprite_rating_full_white_2x_width = 34px;
 $sprite_rating_full_white_2x_height = 32px;
 $sprite_rating_full_white_2x_total_width = 498px;
 $sprite_rating_full_white_2x_total_height = 261px;
 $sprite_rating_full_white_2x_image = '../../images/build/sprite@2x.png';
-$sprite_rating_full_white_2x = 362px 105px -362px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_full_white-2x';
+$sprite_rating_full_white_2x = 434px 105px -434px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_full_white-2x';
+$sprite_status_no_small_2x_name = 'sprite_status_no_small-2x';
+$sprite_status_no_small_2x_x = 404px;
+$sprite_status_no_small_2x_y = 139px;
+$sprite_status_no_small_2x_offset_x = -404px;
+$sprite_status_no_small_2x_offset_y = -139px;
+$sprite_status_no_small_2x_width = 22px;
+$sprite_status_no_small_2x_height = 22px;
+$sprite_status_no_small_2x_total_width = 498px;
+$sprite_status_no_small_2x_total_height = 261px;
+$sprite_status_no_small_2x_image = '../../images/build/sprite@2x.png';
+$sprite_status_no_small_2x = 404px 139px -404px -139px 22px 22px 498px 261px '../../images/build/sprite@2x.png' 'sprite_status_no_small-2x';
+$sprite_status_ok_small_2x_name = 'sprite_status_ok_small-2x';
+$sprite_status_ok_small_2x_x = 470px;
+$sprite_status_ok_small_2x_y = 105px;
+$sprite_status_ok_small_2x_offset_x = -470px;
+$sprite_status_ok_small_2x_offset_y = -105px;
+$sprite_status_ok_small_2x_width = 24px;
+$sprite_status_ok_small_2x_height = 22px;
+$sprite_status_ok_small_2x_total_width = 498px;
+$sprite_status_ok_small_2x_total_height = 261px;
+$sprite_status_ok_small_2x_image = '../../images/build/sprite@2x.png';
+$sprite_status_ok_small_2x = 470px 105px -470px -105px 24px 22px 498px 261px '../../images/build/sprite@2x.png' 'sprite_status_ok_small-2x';
+$sprite_watch_2x_name = 'sprite_watch-2x';
+$sprite_watch_2x_x = 362px;
+$sprite_watch_2x_y = 139px;
+$sprite_watch_2x_offset_x = -362px;
+$sprite_watch_2x_offset_y = -139px;
+$sprite_watch_2x_width = 40px;
+$sprite_watch_2x_height = 22px;
+$sprite_watch_2x_total_width = 498px;
+$sprite_watch_2x_total_height = 261px;
+$sprite_watch_2x_image = '../../images/build/sprite@2x.png';
+$sprite_watch_2x = 362px 139px -362px -139px 40px 22px 498px 261px '../../images/build/sprite@2x.png' 'sprite_watch-2x';
 $spritesheet_width = 249px;
 $spritesheet_height = 130px;
 $spritesheet_image = '../../images/build/sprite.png';
-$spritesheet_sprites = $sprite_logo $sprite_logo_inner $sprite_promo_bags $sprite_promo_bowtie $sprite_promo_glasses $sprite_promo_hanger $sprite_rating_empty $sprite_rating_empty_white $sprite_rating_full $sprite_rating_full_white;
+$spritesheet_sprites = $sprite_getmore $sprite_logo $sprite_logo_inner $sprite_promo_bags $sprite_promo_bowtie $sprite_promo_glasses $sprite_promo_hanger $sprite_rating_empty $sprite_rating_empty_white $sprite_rating_full $sprite_rating_full_white $sprite_status_no_small $sprite_status_ok_small $sprite_watch;
 $spritesheet = 249px 130px '../../images/build/sprite.png' $spritesheet_sprites;
 $retina_spritesheet_width = 498px;
 $retina_spritesheet_height = 261px;
 $retina_spritesheet_image = '../../images/build/sprite@2x.png';
-$retina_spritesheet_sprites = $sprite_logo_2x $sprite_logo_inner_2x $sprite_promo_bags_2x $sprite_promo_bowtie_2x $sprite_promo_glasses_2x $sprite_promo_hanger_2x $sprite_rating_empty_2x $sprite_rating_empty_white_2x $sprite_rating_full_2x $sprite_rating_full_white_2x;
+$retina_spritesheet_sprites = $sprite_getmore_2x $sprite_logo_2x $sprite_logo_inner_2x $sprite_promo_bags_2x $sprite_promo_bowtie_2x $sprite_promo_glasses_2x $sprite_promo_hanger_2x $sprite_rating_empty_2x $sprite_rating_empty_white_2x $sprite_rating_full_2x $sprite_rating_full_white_2x $sprite_status_no_small_2x $sprite_status_ok_small_2x $sprite_watch_2x;
 $retina_spritesheet = 498px 261px '../../images/build/sprite@2x.png' $retina_spritesheet_sprites;
 
 /*
@@ -247,6 +335,8 @@ These "retina group" variables are mappings for the naming and pairing of normal
 
 The list formatted variables are intended for mixins like `retinaSprite` and `retinaSprites`.
 */
+$sprite_getmore_group_name = 'sprite_getmore';
+$sprite_getmore_group = 'sprite_getmore' $sprite_getmore $sprite_getmore_2x;
 $sprite_logo_group_name = 'sprite_logo';
 $sprite_logo_group = 'sprite_logo' $sprite_logo $sprite_logo_2x;
 $sprite_logo_inner_group_name = 'sprite_logo_inner';
@@ -267,7 +357,13 @@ $sprite_rating_full_group_name = 'sprite_rating_full';
 $sprite_rating_full_group = 'sprite_rating_full' $sprite_rating_full $sprite_rating_full_2x;
 $sprite_rating_full_white_group_name = 'sprite_rating_full_white';
 $sprite_rating_full_white_group = 'sprite_rating_full_white' $sprite_rating_full_white $sprite_rating_full_white_2x;
-$retina_groups = $sprite_logo_group $sprite_logo_inner_group $sprite_promo_bags_group $sprite_promo_bowtie_group $sprite_promo_glasses_group $sprite_promo_hanger_group $sprite_rating_empty_group $sprite_rating_empty_white_group $sprite_rating_full_group $sprite_rating_full_white_group;
+$sprite_status_no_small_group_name = 'sprite_status_no_small';
+$sprite_status_no_small_group = 'sprite_status_no_small' $sprite_status_no_small $sprite_status_no_small_2x;
+$sprite_status_ok_small_group_name = 'sprite_status_ok_small';
+$sprite_status_ok_small_group = 'sprite_status_ok_small' $sprite_status_ok_small $sprite_status_ok_small_2x;
+$sprite_watch_group_name = 'sprite_watch';
+$sprite_watch_group = 'sprite_watch' $sprite_watch $sprite_watch_2x;
+$retina_groups = $sprite_getmore_group $sprite_logo_group $sprite_logo_inner_group $sprite_promo_bags_group $sprite_promo_bowtie_group $sprite_promo_glasses_group $sprite_promo_hanger_group $sprite_rating_empty_group $sprite_rating_empty_white_group $sprite_rating_full_group $sprite_rating_full_white_group $sprite_status_no_small_group $sprite_status_ok_small_group $sprite_watch_group;
 
 /*
 The provided mixins are intended to be used with the array-like variables
