--- a/app/assets/styles/src/blocks/_features.styl
+++ b/app/assets/styles/src/blocks/_features.styl
@@ -1,13 +1,13 @@
 .features
 	padding 35px 0 25px
-	background #f7f7f7
+	background $clr_grey_bg
 	text-align center
 	position relative
 	
 	&::after
 		content ''
 		display block
-		background #f7f7f7
+		background $clr_grey_bg
 		position absolute
 		bottom -20px
 		left 50%
