--- a/app/jade/stylist_page.jade
+++ b/app/jade/stylist_page.jade
@@ -15,8 +15,24 @@ html(lang="en")
 					.stylist_profile__photo.large-2.columns
 						img.block(src="http://pikchyriki.net/avatar/krutye/140/8.jpg")
 
-					.stylist_profile__info.large-7
+					.stylist_profile__info.large-6
 						.stylist_profile__name Василий Степанов
+						.stylist_profile__summary
+							a.stylist_profile__summary__item.iblock(src="")
+								| О себе
+							.stylist_profile__summary__item.iblock
+								b 24
+								| Cмены
+
+						a.button(href="") Заказать смену
+
+					.stylist_profile__socials.large-3
+						.rating
+							.icon.rating__item.state_full
+							.icon.rating__item.state_full
+							.icon.rating__item.state_full
+							.icon.rating__item
+							.icon.rating__item
 
 		section.catalog
 			p.title Портфолио
