client profile form

--- a/app/assets/styles/src/blocks/_header.styl
+++ b/app/assets/styles/src/blocks/_header.styl
@@ -12,7 +12,7 @@
 		
 	&_inner
 		background: white
-		border-bottom: 1px solid #dbdbdb
+		border-bottom: 1px solid $clr_separator
 		
 	&__logo
 		display block
