--- a/app/assets/styles/src/blocks/_stylist.styl
+++ b/app/assets/styles/src/blocks/_stylist.styl
@@ -64,7 +64,7 @@
 	&_profile
 		background: $clr_grey_bg
 		padding 30px 0
-		border-bottom: 1px solid #dbdbdb
+		border-bottom: 1px solid $clr_separator
 		clearfix()
 
 		&__info
@@ -97,7 +97,7 @@
 
 			& a
 				border-radius 3px
-				border 1px solid #dbdbdb
+				border 1px solid $clr_separator
 				padding 5px 15px
 				line-height 18px
 
