--- a/app/assets/styles/src/helpers/_variables.styl
+++ b/app/assets/styles/src/helpers/_variables.styl
@@ -1,4 +1,7 @@
 $clr_blue = #005cb6;
 $clr_base = #222222;
+$clr_grey_light = #777777;
 
 $clr_grey_bg = #f0f0f0;
+$clr_separator = #dbdbdb;
+$clr_separator_grey = #cccccc;
