--- a/app/jade/includes/footer.jade
+++ b/app/jade/includes/footer.jade
@@ -2,7 +2,7 @@ footer.footer
 	.wrapper
 		.row
 			.large-2.columns
-				a.button.button__footer(href="") Стать стилистом
+				a.button.button_footer(href="") Стать стилистом
 				
 			ul.footer__nav.large-4.columns
 				li.footer__nav__item
