--- a/app/jade/stylist_catalog.jade
+++ b/app/jade/stylist_catalog.jade
@@ -39,11 +39,11 @@ html(lang="en")
 										| Василиcа Степанова
 
 									.rating.rating_stylist
-										.icon.rating__item.state_full
-										.icon.rating__item.state_full
-										.icon.rating__item.state_full
-										.icon.rating__item
-										.icon.rating__item
+										i.icon.rating__item.state_full
+										i.icon.rating__item.state_full
+										i.icon.rating__item.state_full
+										i.icon.rating__item
+										i.icon.rating__item
 
 									.stylist__summary
 										.stylist__summary__item.count
