--- a/app/jade/stylist_page.jade
+++ b/app/jade/stylist_page.jade
@@ -28,11 +28,11 @@ html(lang="en")
 
 					.stylist_profile__socials.large-3
 						.rating
-							.icon.rating__item.state_full
-							.icon.rating__item.state_full
-							.icon.rating__item.state_full
-							.icon.rating__item
-							.icon.rating__item
+							i.icon.rating__item.state_full
+							i.icon.rating__item.state_full
+							i.icon.rating__item.state_full
+							i.icon.rating__item
+							i.icon.rating__item
 
 		section.catalog
 			p.title Портфолио
